crates/simulator/tests/snapshots/flip_flop__async_reset_sir.snap
---
source: crates/simulator/tests/flip_flop.rs
expression: sir_output
---
=== Evaluation Flip-Flops (eval_apply_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, var0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<1>
      r1: logic<32>
      r2: logic<8>
      r3: logic<8>
      r4: logic<8>
    b0:
      r0 = Load(addr=rst (region=0), offset=0, bits=1)
      Branch(r0 ? b1 : b2)
    b1:
      r1 = SIRValue(0x0)
      r2 = SIRValue(0xff)
      r3 = r1 And r2
      Store(addr=q (region=0), offset=0, bits=8, src_reg = 3)
      Jump(b3)
    b2:
      r4 = Load(addr=d (region=0), offset=0, bits=8)
      Store(addr=q (region=0), offset=0, bits=8, src_reg = 4)
      Jump(b3)
    b3:
      Return
Trigger Group: rst (AbsoluteAddr(inst0, var1))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<1>
      r1: logic<32>
      r2: logic<8>
      r3: logic<8>
      r4: logic<8>
    b0:
      r0 = Load(addr=rst (region=0), offset=0, bits=1)
      Branch(r0 ? b1 : b2)
    b1:
      r1 = SIRValue(0x0)
      r2 = SIRValue(0xff)
      r3 = r1 And r2
      Store(addr=q (region=0), offset=0, bits=8, src_reg = 3)
      Jump(b3)
    b2:
      r4 = Load(addr=d (region=0), offset=0, bits=8)
      Store(addr=q (region=0), offset=0, bits=8, src_reg = 4)
      Jump(b3)
    b3:
      Return

=== Evaluation Flip-Flops (eval_only_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, var0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<1>
      r1: logic<32>
      r2: logic<8>
      r3: logic<8>
      r4: logic<8>
    b0:
      Commit(src=q (region=0), dst=q (region=1), offset=0, bits=8)
      r0 = Load(addr=rst (region=0), offset=0, bits=1)
      Branch(r0 ? b1 : b2)
    b1:
      r1 = SIRValue(0x0)
      r2 = SIRValue(0xff)
      r3 = r1 And r2
      Store(addr=q (region=1), offset=0, bits=8, src_reg = 3)
      Jump(b3)
    b2:
      r4 = Load(addr=d (region=0), offset=0, bits=8)
      Store(addr=q (region=1), offset=0, bits=8, src_reg = 4)
      Jump(b3)
    b3:
      Return
Trigger Group: rst (AbsoluteAddr(inst0, var1))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<1>
      r1: logic<32>
      r2: logic<8>
      r3: logic<8>
      r4: logic<8>
    b0:
      Commit(src=q (region=0), dst=q (region=1), offset=0, bits=8)
      r0 = Load(addr=rst (region=0), offset=0, bits=1)
      Branch(r0 ? b1 : b2)
    b1:
      r1 = SIRValue(0x0)
      r2 = SIRValue(0xff)
      r3 = r1 And r2
      Store(addr=q (region=1), offset=0, bits=8, src_reg = 3)
      Jump(b3)
    b2:
      r4 = Load(addr=d (region=0), offset=0, bits=8)
      Store(addr=q (region=1), offset=0, bits=8, src_reg = 4)
      Jump(b3)
    b3:
      Return

=== Application Flip-Flops (apply_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, var0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
    b0:
      Commit(src=q (region=1), dst=q (region=0), offset=0, bits=8)
      Return
Trigger Group: rst (AbsoluteAddr(inst0, var1))
  Execution Unit 0:
    Entry Block: 0
    Registers:
    b0:
      Commit(src=q (region=1), dst=q (region=0), offset=0, bits=8)
      Return

=== Evaluation Combinational Logic (eval_comb) ===
Execution Unit 0:
  Entry Block: 0
  Registers:
  b0:
    Return
