crates/simulator/tests/snapshots/flip_flop__commit_sinking_multi_store_sir.snap
---
source: crates/simulator/tests/flip_flop.rs
expression: output
---
=== Evaluation Flip-Flops (eval_apply_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, var0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<1>
      r1: logic<32>
      r2: logic<8>
      r3: logic<8>
      r4: logic<32>
      r5: logic<8>
      r6: logic<8>
      r7: logic<32>
      r8: logic<8>
      r9: logic<8>
      r10: logic<32>
      r11: logic<8>
      r12: logic<8>
    b0:
      r0 = Load(addr=rst (region=0), offset=0, bits=1)
      Branch(r0 ? b1 : b2)
    b1:
      r1 = SIRValue(0x0)
      r2 = SIRValue(0xff)
      r3 = r1 And r2
      Store(addr=a (region=0), offset=0, bits=8, src_reg = 3)
      r4 = SIRValue(0x0)
      r5 = SIRValue(0xff)
      r6 = r4 And r5
      Store(addr=b (region=0), offset=0, bits=8, src_reg = 6)
      Jump(b3)
    b2:
      r7 = SIRValue(0x1)
      r8 = SIRValue(0xff)
      r9 = r7 And r8
      Store(addr=a (region=0), offset=0, bits=8, src_reg = 9)
      r10 = SIRValue(0x2)
      r11 = SIRValue(0xff)
      r12 = r10 And r11
      Store(addr=b (region=0), offset=0, bits=8, src_reg = 12)
      Jump(b3)
    b3:
      Return

=== Evaluation Flip-Flops (eval_only_ffs) ===

=== Application Flip-Flops (apply_ffs) ===

=== Evaluation Combinational Logic (eval_comb) ===
Execution Unit 0:
  Entry Block: 0
  Registers:
  b0:
    Return
