crates/simulator/tests/snapshots/flip_flop__ff_function_call_multistatement_hoisting_sir.snap
---
source: crates/simulator/tests/flip_flop.rs
assertion_line: 867
expression: output
---
=== Evaluation Flip-Flops (eval_apply_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, var0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<8>
      r1: bit<8>
      r2: logic<8>
      r3: logic<8>
      r4: bit<8>
      r5: logic<8>
      r6: logic<8>
      r7: bit<8>
      r8: logic<8>
      r9: logic<8>
    b0:
      r0 = Load(addr=d (region=0), offset=0, bits=8)
      r1 = SIRValue(0x0)
      r2 = r0 Eq r1
      Branch(r2 ? b1 : b2)
    b1:
      r4 = SIRValue(0x1)
      r5 = r0 Add r4
      Jump(b3 [r5])
    b2:
      r7 = SIRValue(0x2)
      r8 = r0 Add r7
      Jump(b3 [r8])
    b3:
      Store(addr=q (region=0), offset=0, bits=8, src_reg = 9)
      Return

=== Evaluation Flip-Flops (eval_only_ffs) ===

=== Application Flip-Flops (apply_ffs) ===

=== Evaluation Combinational Logic (eval_comb) ===
Execution Unit 0:
  Entry Block: 0
  Registers:
  b0:
    Return
