crates/simulator/tests/snapshots/flip_flop__store_coalescing_sir.snap
---
source: crates/simulator/tests/flip_flop.rs
expression: output
---
=== Evaluation Flip-Flops (eval_apply_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, var0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<8>
      r1: logic<8>
      r2: logic<8>
      r3: logic<8>
    b0:
      r0 = Load(addr=a (region=0), offset=0, bits=8)
      Store(addr=mem (region=0), offset=0, bits=8, src_reg = 0)
      r1 = Load(addr=b (region=0), offset=0, bits=8)
      Store(addr=mem (region=0), offset=8, bits=8, src_reg = 1)
      r2 = Load(addr=c (region=0), offset=0, bits=8)
      Store(addr=mem (region=0), offset=16, bits=8, src_reg = 2)
      r3 = Load(addr=d (region=0), offset=0, bits=8)
      Store(addr=mem (region=0), offset=24, bits=8, src_reg = 3)
      Return

=== Evaluation Flip-Flops (eval_only_ffs) ===

=== Application Flip-Flops (apply_ffs) ===

=== Evaluation Combinational Logic (eval_comb) ===
Execution Unit 0:
  Entry Block: 0
  Registers:
  b0:
    Return
